--- a/src/docs/guides/sheet/features/import-export.en-US.mdx
+++ b/src/docs/guides/sheet/features/import-export.en-US.mdx
@@ -39,6 +39,7 @@ Univer implements the import and export of Excel XLSX format files through plugi
 ```typescript
 import '@univerjs-pro/exchange-client/lib/index.css';
 
+import { UniverExchangeClientPlugin } from '@univerjs-pro/exchange-client';
 import { UniverSheetsExchangeClientPlugin } from '@univerjs-pro/sheets-exchange-client';
 ```
 
@@ -62,24 +63,14 @@ const univer = new Univer({
 ## Register
 
 ```typescript
+univer.registerPlugin(UniverExchangeClientPlugin, {
+  uploadFileServerUrl: `http://localhost:3010/universer-api/stream/file/upload`,
+  importServerUrl: `http://localhost:3010/universer-api/exchange/{type}/import`,
+  exportServerUrl: `http://localhost:3010/universer-api/exchange/{type}/export`,
+  getTaskServerUrl: `http://localhost:3010/universer-api/exchange/task/{taskID}`,
+  signUrlServerUrl: `http://localhost:3010/universer-api/file/{fileID}/sign-url`,
+});
 univer.registerPlugin(UniverSheetsExchangeClientPlugin);
-```
-
-## Configuration <a id="configuration"></a>
-
-If the import/export interface has not changed, you do not need to configure it. If there are changes, you can configure the interface address as follows:
-
-```typescript
-import { IConfigService } from '@univerjs/core'
-import { EXCHANGE_UPLOAD_FILE_SERVER_URL_KEY, EXCHANGE_IMPORT_SERVER_URL_KEY, EXCHANGE_EXPORT_SERVER_URL_KEY, EXCHANGE_GET_TASK_SERVER_URL_KEY, EXCHANGE_SIGN_URL_SERVER_URL_KEY } from '@univerjs-pro/exchange-client';
-
-const injector = univer.__getInjector();
-const configService = injector.get(IConfigService);
-configService.setConfig(EXCHANGE_UPLOAD_FILE_SERVER_URL_KEY, `http://localhost:3010/universer-api/stream/file/upload`);
-configService.setConfig(EXCHANGE_IMPORT_SERVER_URL_KEY, `http://localhost:3010/universer-api/exchange/{type}/import`);
-configService.setConfig(EXCHANGE_EXPORT_SERVER_URL_KEY, `http://localhost:3010/universer-api/exchange/{type}/export`);
-configService.setConfig(EXCHANGE_GET_TASK_SERVER_URL_KEY, `http://localhost:3010/universer-api/exchange/task/{taskID}`);
-configService.setConfig(EXCHANGE_SIGN_URL_SERVER_URL_KEY, `http://localhost:3010/universer-api/file/{fileID}/sign-url`);
 ```
 
 ## Custom Usage
