--- a/src/docs/guides/sheet/features/hyperlink/introduction.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/hyperlink/introduction.zh-CN.mdx
@@ -2,7 +2,7 @@ import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import Sandbox from '@/components/Sandbox'
 
-import entryFile from './hyperlink/demo-1/index.txt'
+import entryFile from './demo-1/index.txt'
 
 # 超链接
 
@@ -10,7 +10,9 @@ import entryFile from './hyperlink/demo-1/index.txt'
 
 <Sandbox entryFile={entryFile} />
 
-插入超链接，支持点击跳转到指定链接、单元格、工作表。
+1. 超链接功能可跳转工作表、单元格，支持添加、更新、解析和删除链接。
+2. 支持富文本内插入超链接。
+3. 超链接支持 子表、range/cell、defined-name、标准链接(http,mailto等)。
 
 ## 安装
 
@@ -58,32 +60,4 @@ const univer = new Univer({
 ```typescript
 univer.registerPlugin(UniverSheetsHyperLinkPlugin);
 univer.registerPlugin(UniverSheetsHyperLinkUIPlugin);
-```
-
-## API
-
-完整API请参考[@univerjs/sheets-hyper-link-ui](/typedoc/@univerjs/sheets-hyper-link-ui/README)
-
-### 使用 Command
-
-```typescript
-// All commands
-import { AddHyperLinkCommand, type IAddHyperLinkCommandParams } from '@univerjs/sheets-hyper-link-ui';
-import { RemoveHyperLinkCommand, CancelHyperLinkCommand, type IRemoveHyperLinkCommandParams } from '@univerjs/sheets-hyper-link-ui';
-import { UpdateHyperLinkCommand, type IUpdateHyperLinkCommandParams } from '@univerjs/sheets-hyper-link-ui';
-
-// Add hyperlink by command
-const commandService = univer.__getInjector().get(ICommandService);
-
-commandService.executeCommand(AddHyperLinkCommand.id, {
-  unitId: 'unitId',
-  subUnitId: 'subUnitId',
-  link: {
-    // comment content
-    payload: 'https://univer.ai',
-    id: '1',
-    row: 0,
-    column: 0
-  },
-} as IAddCommentCommandParams);
 ```
