feat: add docker compose document (#291)

--- a/src/docs/guides/general/server/kubernetes.zh-CN.mdx
+++ b/src/docs/guides/general/server/kubernetes.zh-CN.mdx
@@ -50,13 +50,20 @@ helm version
   kubectl get pods
   ```
 
+  3. 部署可观测性组件（可选）：
+  ```bash
+  helm upgrade --install -n univer-observability --create-namespace \
+      --set global.univerNamespace="univer" \
+      univer-observability oci://univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/helm-charts/univer-observability
+  ```
+
   ### 验证部署
 
   ```bash
   # 可以简单修改本地 hosts 文件来解析域名。
   # 默认域名: univer.example.com
 
-  open: http://univer.example.com
+  open: http://univer.example.com/sheet/
   ```
 </Steps>
 
