--- a/src/docs/guides/general/server/kubernetes.en-US.mdx
+++ b/src/docs/guides/general/server/kubernetes.en-US.mdx
@@ -50,13 +50,20 @@ helm version
   kubectl get pods
   ```
 
+  3. Deploy observability component
+  ```bash
+  helm upgrade --install -n univer-observability --create-namespace \
+      --set global.univerNamespace="univer" \
+      univer-observability oci://univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/helm-charts/univer-observability
+  ```
+
   ### Deployment Verification
 
   ```bash
   # For quick testing, you might edit your local hosts file to map the domain.
   # Default domain: univer.example.com
 
-  Visit: http://univer.example.com
+  Visit: http://univer.example.com/sheet/
   ```
 </Steps>
 
