chore: remove dialog

--- a/src/docs/guides/sheet/features/core/permission.en-US.mdx
+++ b/src/docs/guides/sheet/features/core/permission.en-US.mdx
@@ -107,7 +107,7 @@ Range permissions can also be set via API and command modes. Here, we'll use ran
 
 ```typescript
 const permission = univerAPI.getPermission();
-const res = await permission.addRangeBasePermission(unitId, subUnitId, ranges);
+const res = await permission.addRangeBaseProtection(unitId, subUnitId, ranges);
 // The response differs from worksheet permissions as a sheet may have multiple range protections, so ruleId is used for storing the unique permission rule, and permissionId is for combining permission points.
 const { permissionId, ruleId } = res;
 permission.setRangeProtectionPermissionPoint(unitId, subUnitId, permissionId, RangeProtectionPermissionEditPoint, false);
@@ -166,6 +166,13 @@ You can also use the API to delete all permission settings for a selection.
 const permission = univerAPI.getPermission();
 permission.removeRangeProtection(unitId, subUnitId, ruleIds);
 ```
+
+### How to remove permission dialog
+```typescript
+const permission = univerAPI.getPermission();
+permission.setPermissionDialogVisible(false);
+```
+
 
 ## Extended usage
 
