docs: append desc

--- a/src/docs/guides/general/facade/general-api.en-US.mdx
+++ b/src/docs/guides/general/facade/general-api.en-US.mdx
@@ -150,7 +150,7 @@ univerAPI.copy(sourceRange)
 var targetRange = sheet.getRange(0,1)
 // Set A2 as the active selection
 sheet.setActiveRange(targetRange)
-// Paste
+// Paste the clipboard content to the current selection, and the value of A2 becomes "Hello, Univer!"
 univerAPI.paste()
 ```
 
