--- a/src/docs/guides/general/facade/general-api.en-US.mdx
+++ b/src/docs/guides/general/facade/general-api.en-US.mdx
@@ -134,7 +134,7 @@ Starting from version `0.2.12`, use the [`FUniver.copy()`](https://univer.ai/typ
 
 Example: Copy and paste in a Sheet Range <VersionBadge version="0.2.12+" />
 
-This example can be run in the [Univer Sheet Playground](https://univer.ai/examples/sheets-uniscript).
+This example can be run in the [Sheet UniScript Playground](https://univer.ai/examples/sheets-uniscript).
 
 ```ts
 var sheet = univerAPI.getActiveWorkbook().getActiveSheet()
