--- a/src/docs/guides/general/facade/general-api.zh-CN.mdx
+++ b/src/docs/guides/general/facade/general-api.zh-CN.mdx
@@ -135,7 +135,7 @@ univerAPI.executeCommand('univer.command.redo')
 
 示例: Sheet 区域的复制与粘贴 <VersionBadge version="0.2.12+" />
 
-该示例可在 [Univer Sheet Playground](https://univer.ai/examples/sheets-uniscript) 中运行。
+该示例可在 [Sheet UniScript Playground](https://univer.ai/examples/sheets-uniscript) 中运行。
 
 ```ts
 var sheet = univerAPI.getActiveWorkbook().getActiveSheet()
