--- a/src/pages/guides/sheet/getting-started/workbook-data.en-US.mdx
+++ b/src/pages/guides/sheet/getting-started/workbook-data.en-US.mdx
@@ -1,96 +1,3 @@
-# Univer Sheet Data Structures
+import Content from '@/docs/guides/sheet/getting-started/workbook-data.en-US.mdx'
 
-This document describes the main data structures used in Univer Sheet: `IWorkbookData` and `IWorksheetData`.
-
-## [IWorkbookData](/typedoc/@univerjs/core/interfaces/IWorkbookData)
-
-`IWorkbookData` represents the snapshot of a workbook in Univer Sheet.
-
-### Properties
-
-| Property | Type | Description |
-|----------|------|-------------|
-| id | string | Unique identifier of the Univer Sheet. |
-| name | string | Name of the Univer Sheet. |
-| appVersion | string | Version of the Univer model definition. |
-| locale | LocaleType | Locale of the document. |
-| styles | Record<string, Nullable<IStyleData>> | Style references for the workbook. |
-| sheetOrder | string[] | Array of sheet IDs representing the order of worksheets. |
-| sheets | { [sheetId: string]: Partial<IWorksheetData> } | Record containing data for each worksheet. |
-| resources? | IResources | Optional resources for other plugins. |
-| rev? | number | Revision number for collaborative editing (starts from 1). *@ignore* |
-
-### Example
-
-```typescript
-const workbookData: IWorkbookData = {
-    id: 'unique-workbook-id',
-    name: 'My Workbook',
-    appVersion: '1.0.0',
-    locale: LocaleType.EN_US,
-    styles: { /* style definitions */ },
-    sheetOrder: ['sheet1', 'sheet2'],
-    sheets: {
-        sheet1: { /* sheet data */ },
-        sheet2: { /* sheet data */ }
-    }
-};
-```
-
-## [IWorksheetData](/typedoc/@univerjs/core/interfaces/IWorksheetData)
-
-`IWorksheetData` represents the snapshot of a worksheet in Univer Sheet.
-
-### Properties
-
-| Property | Type | Description |
-|----------|------|-------------|
-| id | string | Unique identifier for the worksheet. |
-| name | string | Name of the worksheet. |
-| tabColor | string | Color of the worksheet tab. |
-| hidden | BooleanNumber | Whether the sheet is hidden. Default: `BooleanNumber.FALSE`. |
-| freeze | IFreeze | Freeze pane settings. |
-| rowCount | number | Total number of rows. |
-| columnCount | number | Total number of columns. |
-| defaultColumnWidth | number | Default width for columns. |
-| defaultRowHeight | number | Default height for rows. |
-| mergeData | IRange[] | Array of merged cell ranges. |
-| cellData | IObjectMatrixPrimitiveType<ICellData> | Matrix of cell contents. [More details.](guides/sheet/getting-started/cell-data) |
-| rowData | IObjectArrayPrimitiveType<Partial<IRowData>> | Array of row data objects. |
-| columnData | IObjectArrayPrimitiveType<Partial<IColumnData>> | Array of column data objects. |
-| rowHeader | { width: number; hidden?: BooleanNumber; } | Row header configuration. |
-| columnHeader | { height: number; hidden?: BooleanNumber; } | Column header configuration. |
-| showGridlines | BooleanNumber | Whether gridlines are visible. |
-| rightToLeft | BooleanNumber | Whether the worksheet is in right-to-left mode. |
-
-### Example
-
-```typescript
-const worksheetData: IWorksheetData = {
-  id: 'sheet1',
-  name: 'Sheet 1',
-  tabColor: '#FF0000',
-  hidden: BooleanNumber.FALSE,
-  freeze: { xSplit: 1, ySplit: 1, startRow: 0, startColumn: 0 },
-  rowCount: 1000,
-  columnCount: 26,
-  defaultColumnWidth: 100,
-  defaultRowHeight: 25,
-  mergeData: [],
-  cellData: {
-    '0': {
-        '0': {
-            v: 123
-        }
-    }
-  },
-  rowData: [],
-  columnData: [],
-  rowHeader: { width: 40 },
-  columnHeader: { height: 20 },
-  showGridlines: BooleanNumber.TRUE,
-  rightToLeft: BooleanNumber.FALSE
-};
-```
-
-This structure provides a comprehensive representation of worksheet data, including layout, content, and display settings.
+<Content />
