--- a/src/docs/guides/sheet/getting-started/workbook-data.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/workbook-data.en-US.mdx
@@ -10,15 +10,15 @@ This document describes the main data structures used in Univer Sheet: `IWorkboo
 
 | Property | Type | Description |
 |----------|------|-------------|
-| id | string | Unique identifier of the Univer Sheet. |
-| name | string | Name of the Univer Sheet. |
-| appVersion | string | Version of the Univer model definition. |
-| locale | LocaleType | Locale of the document. |
-| styles | Record<string, Nullable<IStyleData>> | Style references for the workbook. |
-| sheetOrder | string[] | Array of sheet IDs representing the order of worksheets. |
-| sheets | { [sheetId: string]: Partial<IWorksheetData> } | Record containing data for each worksheet. |
-| resources? | IResources | Optional resources for other plugins. |
-| rev? | number | Revision number for collaborative editing (starts from 1). *@ignore* |
+| id | `string` | Unique identifier of the Univer Sheet. |
+| name | `string` | Name of the Univer Sheet. |
+| appVersion | `string` | Version of the Univer model definition. |
+| locale | `LocaleType` | Locale of the document. |
+| styles | `Record<string, Nullable<IStyleData>>` | Style references for the workbook. |
+| sheetOrder | `string[]` | Array of sheet IDs representing the order of worksheets. |
+| sheets | `{ [sheetId: string]: Partial<IWorksheetData> }` | Record containing data for each worksheet. |
+| resources? | `IResources` | Optional resources for other plugins. |
+| rev? | `number` | Revision number for collaborative editing (starts from 1). *@ignore* |
 
 ### Example
 
@@ -45,23 +45,23 @@ const workbookData: IWorkbookData = {
 
 | Property | Type | Description |
 |----------|------|-------------|
-| id | string | Unique identifier for the worksheet. |
-| name | string | Name of the worksheet. |
-| tabColor | string | Color of the worksheet tab. |
-| hidden | BooleanNumber | Whether the sheet is hidden. Default: `BooleanNumber.FALSE`. |
-| freeze | IFreeze | Freeze pane settings. |
-| rowCount | number | Total number of rows. |
-| columnCount | number | Total number of columns. |
-| defaultColumnWidth | number | Default width for columns. |
-| defaultRowHeight | number | Default height for rows. |
-| mergeData | IRange[] | Array of merged cell ranges. |
-| cellData | IObjectMatrixPrimitiveType<ICellData> | Matrix of cell contents. [More details.](guides/sheet/getting-started/cell-data) |
-| rowData | IObjectArrayPrimitiveType<Partial<IRowData>> | Array of row data objects. |
-| columnData | IObjectArrayPrimitiveType<Partial<IColumnData>> | Array of column data objects. |
-| rowHeader | { width: number; hidden?: BooleanNumber; } | Row header configuration. |
-| columnHeader | { height: number; hidden?: BooleanNumber; } | Column header configuration. |
-| showGridlines | BooleanNumber | Whether gridlines are visible. |
-| rightToLeft | BooleanNumber | Whether the worksheet is in right-to-left mode. |
+| id | `string` | Unique identifier for the worksheet. |
+| name | `string` | Name of the worksheet. |
+| tabColor | `string` | Color of the worksheet tab. |
+| hidden | `BooleanNumber` | Whether the sheet is hidden. Default: `BooleanNumber.FALSE`. |
+| freeze | `IFreeze` | Freeze pane settings. |
+| rowCount | `number` | Total number of rows. |
+| columnCount | `number` | Total number of columns. |
+| defaultColumnWidth | `number` | Default width for columns. |
+| defaultRowHeight | `number` | Default height for rows. |
+| mergeData | `IRange[]` | Array of merged cell ranges. |
+| cellData | `IObjectMatrixPrimitiveType<ICellData>` | Matrix of cell contents. [More details.](guides/sheet/getting-started/cell-data) |
+| rowData | `IObjectArrayPrimitiveType<Partial<IRowData>>` | Array of row data objects. |
+| columnData | `IObjectArrayPrimitiveType<Partial<IColumnData>>` | Array of column data objects. |
+| rowHeader | `{ width: number; hidden?: BooleanNumber; }` | Row header configuration. |
+| columnHeader | `{ height: number; hidden?: BooleanNumber; }` | Column header configuration. |
+| showGridlines | `BooleanNumber` | Whether gridlines are visible. |
+| rightToLeft | `BooleanNumber` | Whether the worksheet is in right-to-left mode. |
 
 ### Example
 
