docs: update desc

--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -608,7 +608,7 @@ Starting from `0.2.15`, `getRange` supports using A1 notation to get ranges.
 
 ```typescript
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-// Get the A1:B2 range of Sheet1
+// Get the A1:B2 range on named Sheet1
 const range1 = sheet.getRange('Sheet1!A1:B2');
 
 // Get a single cell A1
