--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -608,7 +608,7 @@ const range = sheet.getRange(0, 0, 2, 2);
 
 ```typescript
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-// 获取 Sheet1 工作表的 A1:B2 范围
+// 获取名称是 Sheet1 的工作表的 A1:B2 范围
 const range1 = sheet.getRange('Sheet1!A1:B2');
 
 // 获取单个单元格 A1
